--- a/dragon_XR/dragon_XR.html
+++ b/dragon_XR/dragon_XR.html
@@ -13,13 +13,13 @@
     <style type="text/css">
       body { -ms-touch-action: none; }
     </style>
-    <script type="text/javascript" src="dragon_XR.11/files/KeyShotXR.js"></script>
+    <script type="text/javascript" src="dragon_XR/files/KeyShotXR.js"></script>
     <script type="text/javascript">
       var keyshotXR;
 
       function initKeyShotXR() {
         var nameOfDiv = "KeyShotXR";
-        var folderName = "dragon_XR.11";
+        var folderName = "dragon_XR";
         var viewPortWidth = 1920;
         var viewPortHeight = 1275;
         var backgroundColor = "#000000";
